7장 비동기 호출(2)

--- a/이의찬/7장 비동기 호출/7.1 API 요청.md
+++ b/이의찬/7장 비동기 호출/7.1 API 요청.md
@@ -12,7 +12,7 @@ API 요청과 응답은 모두 비동기로 이루어진다. 비동기 처리를
 
 ### fetch로 API 요청하기
 
-신입 개발자 배달이가 장바구니 조회 기능을 만들게 되었다. fetch 함수를 직접 사용해서 장바구니 물품 개수를 배지로 보여주는 코드를 작성했다.
+신입 개발자가 장바구니 조회 기능을 만들었다. fetch 함수를 직접 사용해서 장바구니 물품 개수를 배지로 보여주는 코드를 작성했다.
 
 ```tsx
 import React, { useEffect, useState } from "react";
