--- a/양창훈/챕터9/훅.md
+++ b/양창훈/챕터9/훅.md
@@ -51,3 +51,111 @@ console.log(sumAge) // NaN sumAge 호출 시 agee의 값이 Nan되어 예상치 
 
 위와 같은 사이드 이펙트는 타입스크립트를 사용하면 에러를 사전에 방지할 수 있다.
 
+
+## useEffect
+
+```ts
+type SomeObject = {
+  name: string;
+  id: string;
+};
+
+interface LabelProps {
+  value: SomeObject; //객체
+}
+
+const Label: React.FC<LabelProps> = ({ value }) => {
+  useEffect(() => {
+    /* 수행할 일 */
+  }, [value]);
+};
+
+```
+위처럼 객체자체를 의존성 배열에 두면 참조값이 계속변경되어 원치 않은 렌더링이 발생할 수 있따.
+
+
+```ts
+// after
+const Label: React.FC<LabelProps> = ({ value }) => {
+  const { id, name } = value;
+  useEffect(() => {
+    /* 수행할 일 */
+  }, [id, name]); // value.name과 value.id 대신 name, id 직접 사용
+};
+```
+따라서 분해해서 사용하도록!
+
+근데 왜 이게 타입스크립트 useEffect 에시지 ?
+
+
+
+## useRef
+
+리액트 애플리케이션에서 <input />요소에 포커스를 설정하거나 특정 컴포넌트의 위치로 스크롤을 하는 등 DOM을 직접 선택해야 하는 경우에 사용한다.
+
+```ts
+import { useRef } from "react";
+
+export default function MyInput() {
+  const inputRef = useRef<HTMLInputElement>(null);
+
+  const focusInput = () => {
+    inputRef.current?.focus(); // TS가 정확히 타입 체크해줌
+  };
+
+  return (
+    <>
+      <input ref={inputRef} />
+      <button onClick={focusInput}>포커스</button>
+    </>
+  );
+```
+
+inputRef.current의 타입이 HTMLInputElement | null
+
+focus(), value 등 모든 DOM API 자동 완성 가능.
+
+js에서는 ref.current.focus()가 잘못돼도 에러 못 잡음.
+ts는 잡아줌.
+
+
+## 커스텀 훅
+
+**타입스크립트로 커스텀훅 강화하기**
+
+```ts
+// hooks/useInput.tsx
+import { useState, useCallback } from "react";
+
+const useInput = (initialValue) => {
+  const [value, setValue] = useState(initialValue);
+  const onChange = useCallback((e) => {
+    setValue(e.target.value);
+  }, []);
+  return { value, onChange };
+};
+
+export default useInput;
+```
+위 코드 실행 시 initialValue와 onCahnge함수의 인자로 넣어준 e의 타입이 지정되지 않아 에러가 발생한다.
+이때 두 군데 모두 타입을 명시적으로 정의해주면 해결된다
+
+```ts
+// after
+import { ChangeEvent, useCallback, useState } from "react";
+
+const useInput = (initialValue: string) => {
+  // 인자 타입 추가
+  const [value, setValue] = useState(initialValue);
+  const onChange = useCallback((e: ChangeEvent<HTMLInputElement>) => {
+    // 이벤트 타입 추가
+    setValue(e.target.value);
+  }, []);
+  return { value, onChange };
+};
+
+export default useInput;
+```
+
+그냥 인자에 타입 붙여주는게 강화라는 건가 ?
+
